# trawler

./: .dockerignore  .doco-cd.yml  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh.md  config.toml.example  cron_run.sh  debug_login.py  docker-compose.example.yml  docker-compose.yml  doco-cd-compose.env.example  doco-cd-compose.yml  logrotate.conf  pyproject.toml  run_check.py  run_web.py  tailwind.config.js
.github/workflows/: docker-publish.yml
api/: __init__.py  auth.py  resource_filter.py  schemas.py  token_tool.py
api/routes/: __init__.py  check.py  health.py  messages.py  subscriptions.py
api/v1/: router.py
config/: config.toml.example  cookies.toml.example  subscriptions.toml.example
core/: __init__.py  comments.py  engine.py  formatter.py  notifier.py  pipeline.py  subscription_cli.py  summarizer.py  transcriber.py
core/notifiers/: __init__.py  base.py  email.py  gotify.py  telegram.py
docker/: crontab  entrypoint.sh  supervisord.conf
docs/: TODO-passlib-bcrypt-incompat.md  api.md
docs/superpowers/plans/: 2026-06-11-platform-auth-abstraction-phase-1.md  2026-06-12-weibo-platform-phase-2.md  2026-06-13-message-state-pipeline.md  2026-06-13-post-audit.md  2026-06-13-token-scheduler-phase-4.md  2026-06-13-xhs-qr-login-phase-3.md  2026-06-14-weibo-longtext-comment-unification.md  2026-06-15-http-layer-improvements.md  2026-06-15-http-layer-xhs-vendor.md  2026-06-15-subscription-cli.md  2026-06-15-web-ui-plan.md  2026-06-16-b-frontend-polish.md  2026-06-16-c-gotify-multi-url.md  2026-06-16-d-global-logs.md  2026-06-16-web-ui-redesign-plan.md  2026-06-17-logging-enhancement.md  2026-06-17-ui-polish.md  2026-06-18-todo1-notifier-abstraction.md  2026-06-18-todo2-summarizer-webui.md  2026-06-18-todo4-web-auth.md  2026-06-23-deploy-bugfixes.md  2026-06-25-frontend-build-and-info-display.md  2026-06-25-messagerecord-body-summary.md  2026-06-25-notification-plain-text.md  2026-06-25-server-image-registry-autoupdate.md  2026-06-25-web-post-form-blank-screen.md  2026-06-25-xhs-qrtype-fix.md  2026-06-26-xhs-auth-xhs-library-migration.md  2026-06-26-xhs-unify.md  2026-06-28-ai-summary-fallback.md  (+17 more)
scripts/: build-css.sh  pr-poll-review.sh  verify_xhs_business.py
shared/: config.py  constants.py  cookie_utils.py  downloader.py  dump.py  exceptions.py  http.py  message_store.py  protocols.py
shared/auth/: __init__.py  base.py  qr_display.py  scheduler.py  token_store.py
tests/: test_api_auth.py  test_api_check.py  test_api_fetch.py  test_api_health.py  test_api_messages.py  test_api_subscriptions.py  test_api_token_tool.py  test_async_xhs_wrapper.py  test_auth_base.py  test_bili_dynamic_detector.py  test_bili_dynamic_parse.py  test_bili_push.py  test_bilibili_authenticator.py  test_bilibili_fetch_by_id.py  test_cli.py  test_cli_fetch.py  test_config.py  test_config_ownership_fields.py  test_constants.py  test_cookie_utils.py  test_downloader.py  test_dump.py  test_engine.py  test_engine_fetch_and_process.py  test_exceptions.py  test_fetched_message.py  test_formatter.py  test_gotify_notifier.py  test_handlers_summarize_phase.py  test_manual_check.py  test_message_store.py  test_notifier_base.py  test_ownership.py  test_password_hash.py  test_pipeline_concurrent.py  test_pipeline_e2e.py  test_platform_handlers.py  test_qr_display.py  test_resource_filter.py  test_run_check_cli.py  (+44 more)
web/: __init__.py  app.py  auth.py  logging_bridge.py
web/routes/: __init__.py  auth.py  check.py  dashboard.py  endpoints.py  health.py  logs.py  messages.py  settings.py  subscription_ownership.py  subscriptions.py  tokens.py  web_auth.py
web/src/: input.css
web/static/: app.css  tokens.css
web/templates/: _auth_card.html  _candidates.html  _macros.html  _token_modal.html  account.html  base.html  check.html  dashboard.html  endpoints.html  login.html  logs.html  platform_auth.html  settings.html  setup.html  subscriptions.html  tokens.html
(+19 files in other folders)
