[project]
name = "trawler"
version = "0.1.0"
description = "多平台创作者内容追更自动化工作流"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.0",
    "yt-dlp>=2024.0",
    "feedparser>=6.0",
    "requests>=2.31",
    "click>=8.0",
    "rich>=13.0",
    "qrcode>=7.4",
    "tomlkit>=0.13",
    "modelscope>=1.14",
    "funasr>=1.1",
    "torch>=2.1",
    "opencc-python-reimplemented>=0.1.7",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
xhs = [
    "XHS-Downloader>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.uv]
no-build-isolation-package = ["torch"]

[tool.pyright]
include = ["core", "shared", "platforms", "run_check.py"]
exclude = ["vendor", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[project.scripts]
trawler = "run_check:cli"

[tool.setuptools.packages.find]
exclude = ["data*", "docs*", "vendor*", "tests*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
