[project]
name = "trawler"
version = "0.1.0"
description = "多平台创作者内容追更自动化工作流"
requires-python = ">=3.14"
dependencies = [
    "bilibili-api-python>=17.0",
    "click>=8.0",
    "rich>=13.0",
    "terminal-qrcode>=1.1",
    "tomlkit>=0.13",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "faster-whisper>=1.1",
]

[project.optional-dependencies]
xhs = [
    "xhs>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.pyright]
include = ["core", "shared", "platforms", "run_check.py"]
exclude = ["vendor", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[project.scripts]
trawler = "run_check:cli"

[tool.setuptools]
py-modules = ["run_check"]

[tool.setuptools.packages.find]
exclude = ["data*", "docs*", "vendor*", "tests*"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests that require real API credentials (skipped by default)",
]
addopts = "-m \"not integration\""
